<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:name=".categorie"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
style="@style/beigeBackground" >

	<TableLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="27dp">

		<TableRow
		    android:gravity="center">
		    
		    <Button
	        	android:id="@+id/test1"
	        	android:layout_height="wrap_content"
	        	android:text="@string/firstpage" />
		    
		    <TextView
			    android:id="@+id/page"
			    android:layout_height="wrap_content"
		        android:text="@string/page" 
		        />

		    <Button
		        android:id="@+id/page2"
		        android:layout_height="wrap_content"
		        android:text="@string/lastpage"/>
		
		</TableRow>
		
		<View
			android:layout_height="2dip"
			style="@style/separation"
			android:layout_marginTop="20dip" />
		
	    <TextView
	        android:gravity="center"
	        android:padding="15dip"
	        android:text="@string/categorie1"
	        style="@style/roseBackground" />
	   
	    <View
			android:layout_height="2dip"
			style="@style/separation" />

	    <TextView
	        android:layout_weight="1.14"
	        android:gravity="center"
	        android:padding="15dip"
	        android:text="@string/categorie2" 
	        style="@style/roseBackground" />
	    
	    <View
			android:layout_height="2dip"
			style="@style/separation" />

	    <TextView
	        android:gravity="center"
	        android:padding="15dip"
	        android:text="@string/categorie3"
	        style="@style/roseBackground" />
	    
	    <View
			android:layout_height="2dip"
			style="@style/separation" />
	    
	    <TextView
	        android:layout_weight="1.14"
	        android:gravity="center"
	        android:padding="15dip"
	        android:text="@string/categorie4"
	        style="@style/roseBackground" />
	    
	    <View
			android:layout_height="2dip"
			style="@style/separation" />
	    
	    <TextView
	        android:id="@+id/categorie5"
	        android:layout_weight="1.14"
	        android:gravity="center"
	        android:padding="15dip"
	        android:text="@string/categorie5"
	        style="@style/roseBackground" />
	    
	    <View
			android:layout_height="2dip"
			style="@style/separation" />
	    
	    <TextView
	        android:id="@+id/topic1"
	        style="@style/roseBackground"
	        android:layout_weight="1.14"
	        android:gravity="center"
	        android:padding="15dip"
	        android:text="@string/topic1"
	        android:visibility="gone" />
	    
	     <TextView
	        android:id="@+id/topic2"
	        style="@style/roseBackground"
	        android:layout_weight="1.14"
	        android:gravity="center"
	        android:padding="15dip"
	        android:text="@string/topic2"
	        android:visibility="gone" />
	    	    	
		<TableRow
			android:gravity="center"
			android:layout_marginTop="20dip" >
			    
			<Button
		        android:layout_height="wrap_content"
		        android:text="@string/firstpage" />
			    
			<TextView
				android:layout_height="wrap_content"
			    android:text="@string/page" 
				/>

			<Button
				android:layout_height="wrap_content"
		    	android:text="@string/lastpage"/>
		
		</TableRow>
	    
	</TableLayout>


</ScrollView>