<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/beigeBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/message"
            android:layout_width="153dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/message" />

        <Button
            android:id="@+id/search"
            android:layout_width="153dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/search" />

        <Button
            android:id="@+id/parameters"
            android:layout_width="153dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/parameters" />

        <Button
            android:id="@+id/logout"
            android:layout_width="153dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/logout" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="153dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/createAccount" />

        <Button
            android:id="@+id/about"
            android:layout_width="153dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="10dip"
            android:text="@string/about" />
    </TableLayout>

</ScrollView>