<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <View
            style="@style/separation"
            android:layout_height="2dip" />

        <TextView
            android:id="@+id/message"
            style="@style/textViewSettings"
            android:text="@string/message" />

        <View
            style="@style/separation"
            android:layout_height="2dip" />

        <TextView
            android:id="@+id/account"
            style="@style/textViewSettings"
            android:text="@string/myAccount" />

        <View
            style="@style/separation"
            android:layout_height="2dip" />

        <TextView
            android:id="@+id/chatbox"
            style="@style/textViewSettings"
            android:text="@string/chatboxSet" />

        <View
            style="@style/separation"
            android:layout_height="2dip" />

        <CheckBox
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="12dip"
            android:checked="false"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <View
            style="@style/separation"
            android:layout_height="2dip" />
    </TableLayout>

</ScrollView>