<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtpseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginTop="10dip"
        android:text="@string/txtpseudo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mypseudo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginTop="10dip"
        android:text="@string/txtname"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/myname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtprenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginTop="10dip"
        android:text="@string/txtprenom"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/myprenom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginTop="10dip"
        android:text="@string/txtmail"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mymail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    
    <Button
            android:id="@+id/modify"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dip"
            android:text="@string/modify" />
    
</LinearLayout>