<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/beigeBackground"
    android:layout_width="fill_parent"
   		 android:orientation="vertical"
   		 android:layout_gravity="center"
   		 android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/mpWidget"
        android:layout_width="fill_parent"
        android:layout_height="108dip"
        android:text="@string/mpWidget"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/precedentW"
            android:layout_width="90dip"
            android:layout_height="36dip"
            android:text="@string/precedentWi"
            android:textColor="@color/black" />
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="36dip" />

        <Button
            android:id="@+id/suivantW"
            android:layout_width="90dip"
            android:layout_height="36dip"
            android:text="@string/suivantWi"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
