<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/aboutContent1"
        android:layout_marginLeft="6dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/aboutContent1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="12dip"
        android:id="@+id/aboutContent2"
        android:layout_marginLeft="6dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aboutContent1"
        android:text="@string/aboutContent2" />

    <TextView
        android:layout_marginTop="8dip"
        android:id="@+id/aboutContent3"
        android:layout_marginLeft="6dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aboutContent2"
        android:text="@string/aboutContent3"
        android:textSize="20sp"
        android:textStyle="bold"  />

</RelativeLayout>